<resources>
    <string name="app_name">Indigo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_job">Good Job!</string>
    <string name="activity">Activity</string>
    <string name="home">Home</string>
    <string name="glucose">Glucose</string>
    <string name="skip">SKIP</string>
    <string name="foot_temperature">Foot Temperature</string>
    <string name="sample_text">sample text</string>
    <string name="open">"open "</string>
    <string name="close">close</string>
    <string name="give_access">Give Access</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="blood_glucose_detection_description">Using advanced spectroscopy we give you a range-based glucose level and detection of hyperglycemic and extreme hypoglycemic situations.</string>
    <string name="blood_glucose_detection">Blood Glucose Detection</string>
    <string name="foot_temperature_amp_pressure_monitoring"><![CDATA[Foot Temperature & Pressure Monitoring]]></string>
    <string name="foot_temperature_amp_pressure_monitoring_description"><![CDATA[Identification of high temperature & pressure zones to prevent neuropathy, foot ulcers, gangrene, etc.]]></string>
    <string name="emergency_detection">Emergency Detection</string>
    <string name="emergency_detection_description">Sends alerts to the user\'s choice of contacts in the event of hypoglycemic shock, heart stroke or falls.</string>
    <string name="algorithms_that_grow_with_you">Algorithms that grow with you</string>
    <string name="algorithms_that_grow_with_you_description">Machine-learning based proprietary algorithms that are personally tailored according to your lifestyle and body.</string>
    <string name="resting_heart_rate">Resting Heart Rate</string>
    <string name="used_to_measure_long_term_heart_and_kidney_health_and_potentially_prevents_diabetic_nephropathy_and_heart_failure_description">Used to measure long term heart and kidney health and potentially prevents diabetic nephropathy and heart failure.</string>
    <string name="login_with_google_account">Login With Google Account</string>
    <string name="subscription_plan">Subscription Plan</string>
    <string name="log_out">Log out</string>
    <string name="about_us">About Us</string>
</resources>