<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_activity"
        android:icon="@drawable/ic_nav_activity"
        android:title="@string/activity"
        app:cnb_iconColor="@color/menu_bottomNavigation_icon"/>
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/home"
        android:enabled="true"
        app:cnb_iconColor="@color/menu_bottomNavigation_icon"/>
    <item
        android:id="@+id/nav_glucometer"
        android:icon="@drawable/ic_nav_glucometer"
        android:title="@string/glucose"
        app:cnb_iconColor="@color/menu_bottomNavigation_icon" />

</menu>